Ingredients can now properly be joined with categories, easier to avoid duplicate categories being created.